--- a/Week 2/Tokenizer/Tokenizer/Tokenizer.csproj
+++ b/Week 2/Tokenizer/Tokenizer/Tokenizer.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tokenizer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
