--- a/Week 2/Tokenizer/Editor/Editor.csproj
+++ b/Week 2/Tokenizer/Editor/Editor.csproj
@@ -53,6 +53,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ConditionalJump.cs" />
+    <Compile Include="DoNothing.cs" />
+    <Compile Include="Jump.cs" />
     <Compile Include="KeyWords.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="Tokenizer.cs" />
